[metadata]
name = gpt-cli-debugger
version = 0.0.1
author = Avnish
author_email = avnishnish07@gmail.com
description = A CLI debugging tool that uses ChatGPT to find bugs in the script
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bovem/gpt-cli-debugger
project_urls =
    Bug Tracker = https://github.com/bovem/gpt-cli-debugger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gpt_cli_debugger
packages = find:
python_requires = >=3.6

[options.packages.find]
where = gpt_cli_debugger